# 2023-Spring-SE102TB-Project-h

./: README.md
AzharModule/: Person.h  Statistics.cpp  Statistics.h  Voter.cpp  persons_data.json
Indidvidual_Candidate/: Address.h  CMakeLists.txt  IndividualCandidate.cpp  IndividualCandidate.h  Makefile  Person.cpp  Person.h  RegistrationIndividualCandidates.cpp  RegistrationIndividualCandidates.h  abc.json  candidates.json  main.cpp  symbols.txt  userInterface.cpp  userInterface.h
M.SHER/: CMakeLists.txt  Candidate.cpp  Candidate.h  Candidates.txt  ElectionMachine.cpp  ElectionMachine.h  Login.cpp  Login.h  Makefile  Members.txt  Party.cpp  Party.h  Person.cpp  Person.h  PersonalDetails.cpp  PersonalDetails.h  Result.cpp  Result.h  Verification.cpp  Verification.h  Voter.cpp  Voter.h  main.cpp
Sector Management+Azhar/: 1.json  Address.cpp  Candidate.h  District.cpp  FederalSector.h  Pakistan Tehreek-e-Insaaf.json  Party.h  PartyCandidate.cpp  PartyRegistration.cpp  Person.cpp  Person.h  Province.cpp  Provinces.cpp  Provinces.h  ProvisionalSector.cpp  Punjab.json  PunjabSectors.txt  Sector.cpp  Sector.h  Voter.cpp  Voter.h  XYZ.json  addCities.cpp  addCities.h  addSectors.cpp  addSectors.h  candidates.json  exeAddCandidate.cpp  main.cpp  partyAdmins.txt  partyRegistrationIDs.txt  r.out  r.out.stackdump  registrationRunner.cpp
SectorManagement/: Address.h  CMakeLists.txt  Candidate.cpp  Candidate.h  District.h  FederalSector.cpp  LahoreSectors.txt  Lahore_federal_sector.txt  Makefile  Party.cpp  PartyCandidate.cpp  PartyCandidate.h  PartyRegistration.h  main.cpp  (+11 more)
(+43 files in other folders)
