cmake_minimum_required(VERSION 3.26)
project(PROJECT_OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(PROJECT_OOP main.cpp
        Party.h
        Party.cpp
        Person.h
        Person.cpp
        Verification.h
        Verification.cpp
        Candidate.h
        Candidate.cpp
        ElectionMachine.h
        ElectionMachine.cpp
        PersonalDetails.cpp
        Voter.h
        Voter.cpp
        Result.h
        Result.cpp
        management.h
        PersonalDetails.h
        Login.cpp
        Login.h
        Login.h
        Login.cpp)
